<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SurtidoIntentImpl</string>
    <string name="action_settings">Settings</string>
    <string name="conociendo">Conociendo la EPS</string>
    <string name="ubicando">Localizacion</string>
    <string name="navegando">Acceso a la web</string>
    <string name="contactando">Tlf. de contacto: 973.702.700</string>
    <string name="Boto1">Por coord.</string>
    <string name="Boto2">Por direcc.</string>
    <string name="Boto3">Por URL</string>
    <string name="Boto4">Google</string>
    <string name="Boto5">Llamar</string>
    <string name="Boto6">Acceder Contactos</string>
    <string name="telef">666666666</string>

    <string name="url">http://www.udl.cat</string>
    <string name="marcar">MARCAR</string>
    <string name="send">SEND SMS</string>
    <string name="galeria">Acceder Galería imágenes</string>
    <string name="email">SEND EMAIL</string>
    <string name="contacto">GET CONTACT</string>







    <string name="opcio1">Seleccionado Localizacion por coordenadas</string>
    <string name="opcio2">Seleccionado Localizacion por dirección</string>
    <string name="opcio3">Accediendo a la web</string>
    <string name="opcio4">Buscando en Google</string>
    <string name="opcio5">Llamando el Tlfn.</string>
    <string name="opcio6">Accediendo a contactos</string>


</resources>
